Gestione stati e "pagine" della session + easter egg generato